quick fix to collapse triangles in outline view
--HG--
branch : refactor

--- a/chrome/content/tabbedtab.css
+++ b/chrome/content/tabbedtab.css
@@ -10,6 +10,12 @@
 @import url("chrome://tabulator/content/js/panes/microblogPane/mbStyle.css"); /*microblog pane*/
 @import url("chrome://tabulator/content/js/panes/social/style.css"); /*social pane*/
 
+/* I couldn't find the code for the collapse image. this is a quick work around
+to make the collapsing easier to use ( the triangles dont jump 20 pixels). ~cm2
+*/
+img[title="Hide details."]{
+  float:left;
+}
 body {background-color: white ; font-size: 80%; font-family: sans-serif}
 
 .warning { color: red; }
